# eyecandies

./: .gitignore  README.md  pyproject.toml
dags/: anomalib_conf_template.yaml  autoenc-predict.yaml  autoenc-test.yaml  autoenc-train.yaml  ctx_template.yaml  ec-download.yaml  ec-metrics.yaml  ec-predict.yaml  ec-test.yaml  ec-train.yaml  to_anomalib.yaml  to_anomalib_ctx_template.yaml  tps_ctx_template.yaml  train_and_test.yaml  train_predict_stats.yaml  train_transforms.yaml
docs/: 404.html  README.md  _config.yml  download.html  download.md  feed.xml  index.html  index.md  project.html  test-page.html
docs/_data/: authors.yml  leaderboard.yml
docs/_includes/: contact.html  footer.html  navbar.html  showcase.html
docs/_layouts/: default.html
docs/assets/css/: style.css  style.css.map  style.scss
docs/website/: _config.yml  download.md  index.md
docs/website/_data/: authors.yml  sasso.yml
docs/website/_includes/: body.html  contact.html  navbar.html
docs/website/_layouts/: default.html
docs/website/assets/css/: style.scss
eyecandies/: __init__.py
eyecandies/commands/: __init__.py  download.py  metrics.py  predict.py  test.py  train.py  utils.py
eyecandies/modules/: autoencoder.py  binned_roc.py
eyecandies/stages/: __init__.py  add_label.py  anomaly_score.py  depth.py  stats.py
